<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutActivity"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/aboutBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:background="@drawable/background_about"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbarAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbarAbout"
            android:layout_above="@id/aboutFloor"
            android:layout_margin="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/aboutImageView"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                app:civ_border_color="#333333"
                app:civ_border_width="2dp"
                android:src="@drawable/image_about"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/credit"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_name"
                android:textSize="28sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/dark_grey"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:textSize="18sp"
                android:text="@string/email"
                android:fontFamily="@font/quicksand_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/email_value"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/quicksand_medium"
                android:textIsSelectable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/more"
                android:fontFamily="@font/quicksand_regular"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/aboutFacebookButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_facebook"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/aboutInstagramButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_instagram"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/aboutDicodingButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_dicoding"
                        android:scaleType="fitXY"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/aboutFloor"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</FrameLayout>